--- a/src/Archmage/GameBundle/Resources/views/Army/disband.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Army/disband.html.twig
@@ -40,16 +40,16 @@
                         </div>
                         <div class="col-xs-8 text-padded">
                             {# row #}
-                            <div class="col-xs-4"><i class="fa fa-fw fa-crosshairs"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Ataque total de la tropa">{{ (troop.unit.attack * troop.quantity)|nf }}</span></div>
-                            <div class="col-xs-4"><i class="fa fa-fw fa-shield"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Defensa total de la tropa">{{ (troop.unit.defense * troop.quantity)|nf }}</span></div>
-                            <div class="col-xs-4"><i class="fa fa-fw fa-flash"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Velocidad de la tropa">{{ troop.unit.speed|nf }}</span></div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-crosshairs"></i><span data-toggle="tooltip" data-placement="top" title="Ataque total de la tropa">{{ (troop.unit.attack * troop.quantity)|nf }}</span></div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-shield"></i><span data-toggle="tooltip" data-placement="top" title="Defensa total de la tropa">{{ (troop.unit.defense * troop.quantity)|nf }}</span></div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-flash"></i><span data-toggle="tooltip" data-placement="top" title="Velocidad de la tropa">{{ troop.unit.speed|nf }}</span></div>
                             {# row #}
-                            <div class="col-xs-4"><i class="fa fa-fw fa-money"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Mantenimiento total de Oro al turno">-{{ (troop.unit.goldMaintenance * troop.quantity)|nf }}</span></div>
-                            <div class="col-xs-4"><i class="fa fa-fw fa-users"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Mantenimiento total de Personas al turno">-{{ (troop.unit.peopleMaintenance * troop.quantity)|nf }}</span></div>
-                            <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Mantenimiento total de Maná al turno">-{{ (troop.unit.manaMaintenance * troop.quantity)|nf }}</span></div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-money"></i><span data-toggle="tooltip" data-placement="top" title="Mantenimiento total de Oro al turno">-{{ (troop.unit.goldMaintenance * troop.quantity)|nf }}</span></div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-users"></i><span data-toggle="tooltip" data-placement="top" title="Mantenimiento total de Personas al turno">-{{ (troop.unit.peopleMaintenance * troop.quantity)|nf }}</span></div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i><span data-toggle="tooltip" data-placement="top" title="Mantenimiento total de Maná al turno">-{{ (troop.unit.manaMaintenance * troop.quantity)|nf }}</span></div>
                             {# row #}
-                            <div class="col-xs-6"><i class="fa fa-fw fa-user"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Familia de la tropa">{{ troop.unit.family.name }}</span></div>
-                            <div class="col-xs-6"><i class="fa fa-fw fa-cogs"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Tipo de la tropa">{{ troop.unit.type.name }}</span></div>
+                            <div class="col-xs-6"><i class="fa fa-fw fa-user"></i><span data-toggle="tooltip" data-placement="top" title="Familia de la tropa">{{ troop.unit.family.name }}</span></div>
+                            <div class="col-xs-6"><i class="fa fa-fw fa-cogs"></i><span data-toggle="tooltip" data-placement="top" title="Tipo de la tropa">{{ troop.unit.type.name }}</span></div>
                             {# row #}
                             {# <div class="col-xs-12"><i class="fa fa-fw fa-joomla"></i><a href="#">Habilidad</a></div> #}
                             {# row #}
