--- a/src/Archmage/GameBundle/Resources/views/Army/recruit.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Army/recruit.html.twig
@@ -40,18 +40,18 @@
                         </div>
                         <div class="col-xs-8 text-padded">
                             {# row #}
-                            <div class="col-xs-4"><i class="fa fa-fw fa-crosshairs"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Ataque de la tropa">{{ unit.attack|nf }}</span></div>
-                            <div class="col-xs-4"><i class="fa fa-fw fa-shield"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Defensa de la tropa">{{ unit.defense|nf }}</span></div>
-                            <div class="col-xs-4"><i class="fa fa-fw fa-flash"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Velocidad de la tropa">{{ unit.speed|nf }}</span></div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-crosshairs"></i><span data-toggle="tooltip" data-placement="top" title="Ataque de la tropa">{{ unit.attack|nf }}</span></div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-shield"></i><span data-toggle="tooltip" data-placement="top" title="Defensa de la tropa">{{ unit.defense|nf }}</span></div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-flash"></i><span data-toggle="tooltip" data-placement="top" title="Velocidad de la tropa">{{ unit.speed|nf }}</span></div>
                             {# row #}
-                            <div class="col-xs-12"><i class="fa fa-fw fa-money"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Coste de Oro por tropa">-{{ unit.goldRecruit|nf }}</span></div>
+                            <div class="col-xs-12"><i class="fa fa-fw fa-money"></i><span data-toggle="tooltip" data-placement="top" title="Coste de Oro por tropa">-{{ unit.goldRecruit|nf }}</span></div>
                             {# row #}
-                            <div class="col-xs-4"><i class="fa fa-fw fa-money"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Mantenimiento de Oro al turno por tropa">-{{ unit.goldMaintenance|nf }}</span></div>
-                            <div class="col-xs-4"><i class="fa fa-fw fa-users"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Mantenimiento de Personas al turno por tropa">-{{ unit.peopleMaintenance|nf }}</span></div>
-                            <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Mantenimiento de Maná al turno por tropa">-{{ unit.manaMaintenance|nf }}</span></div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-money"></i><span data-toggle="tooltip" data-placement="top" title="Mantenimiento de Oro al turno por tropa">-{{ unit.goldMaintenance|nf }}</span></div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-users"></i><span data-toggle="tooltip" data-placement="top" title="Mantenimiento de Personas al turno por tropa">-{{ unit.peopleMaintenance|nf }}</span></div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i><span data-toggle="tooltip" data-placement="top" title="Mantenimiento de Maná al turno por tropa">-{{ unit.manaMaintenance|nf }}</span></div>
                             {# row #}
-                            <div class="col-xs-6"><i class="fa fa-fw fa-user"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Familia de la tropa">{{ unit.family.name }}</span></div>
-                            <div class="col-xs-6"><i class="fa fa-fw fa-cogs"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Tipo de la tropa">{{ unit.type.name }}</span></div>
+                            <div class="col-xs-6"><i class="fa fa-fw fa-user"></i><span data-toggle="tooltip" data-placement="top" title="Familia de la tropa">{{ unit.family.name }}</span></div>
+                            <div class="col-xs-6"><i class="fa fa-fw fa-cogs"></i><span data-toggle="tooltip" data-placement="top" title="Tipo de la tropa">{{ unit.type.name }}</span></div>
                             {# row #}
                             {# <div class="col-xs-12"><i class="fa fa-fw fa-joomla"></i><a href="#">Habilidad</a></div> #}
                             {# row #}
