--- a/src/Archmage/GameBundle/Resources/views/Magic/dispell.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/dispell.html.twig
@@ -46,8 +46,8 @@
                             {# row #}
                             <div class="col-xs-12"><i class="fa fa-fw fa-rebel"></i><span class="label label-{{ enchantment.owner.faction.class }}" data-toggle="tooltip" data-placement="top" title="Propietario del Encantamiento"><a href="{{ path('archmage_game_account_profile', {'id': enchantment.owner.id}) }}" class="link">{{ enchantment.owner.nick }}</a></span></div>
                             {# row #}
-                            <div class="col-xs-6"><i class="fa fa-fw fa-magic"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Nivel de Magia del propietario">{{ enchantment.owner.magic|nf }}</span></div>
-                            <div class="col-xs-6"><i class="fa fa-fw fa-hourglass"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Turnos restantes del Encantamiento">{{ enchantment.expiration|nf }}/{{ (enchantment.spell.turnsExpiration * enchantment.owner.magic)|nf }}</span></div>
+                            <div class="col-xs-6"><i class="fa fa-fw fa-magic"></i><span data-toggle="tooltip" data-placement="top" title="Nivel de Magia del propietario">{{ enchantment.owner.magic|nf }}</span></div>
+                            <div class="col-xs-6"><i class="fa fa-fw fa-hourglass"></i><span data-toggle="tooltip" data-placement="top" title="Turnos restantes del Encantamiento">{{ enchantment.expiration|nf }}/{{ (enchantment.spell.turnsExpiration * enchantment.owner.magic)|nf }}</span></div>
                             {# row #}
                             <div class="col-xs-12"><i class="fa fa-fw fa-joomla"></i>{{ enchantment.spell.skill.description|raw }}</div>
                             {# row #}
