--- a/src/Archmage/GameBundle/Resources/views/Account/ranking.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Account/ranking.html.twig
@@ -24,7 +24,7 @@
                     <tr>
                         <td class="text-right">{{ loop.index|nff }}</td>
                         <td class="text-right">{{ player.power|nff }}</td>
-                        <td class="text-center"><span class="label label-{{ player.faction.class }}"><a href="{{ path('archmage_game_account_profile', { 'id': player.id } ) }}" class="link">{{ player.nick }}</a></span></td>
+                        <td class="text-center">{% if player.apocalypse %}<i class="fa fa-fw fa-eye" data-toggle="tooltip" data-placement="top" title="Ha lanzado Apocalipsis y ha sido descubierto por un Espionaje"></i>{% endif %}<span class="label label-{{ player.faction.class }}"><a href="{{ path('archmage_game_account_profile', { 'id': player.id } ) }}" class="link">{{ player.nick }}</a></span></td>
                         <td class="text-right">{{ player.lands|nff }}</td>
                     </tr>
                     {% endfor %}
