--- a/src/Archmage/GameBundle/Resources/views/navbar.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/navbar.html.twig
@@ -53,6 +53,7 @@
                         <li><a href="{{ path('archmage_game_account_message') }}"><i class="fa fa-fw fa-lg fa-envelope"></i>Mensajes</a></li>
                         <li><a href="{{ path('archmage_game_account_legend') }}"><i class="fa fa-fw fa-lg fa-moon-o"></i>Leyendas</a></li>
                         <li class="divider"></li>
+                        <li><a href="{{ path('archmage_game_home_patch') }}"><i class="fa fa-fw fa-lg fa-medkit"></i>Parches</a></li>
                         <li><a href="{{ path('archmage_game_home_help') }}"><i class="fa fa-fw fa-lg fa-book"></i>Ayuda</a></li>
                         <li><a href="{{ path('fos_user_security_logout') }}"><i class="fa fa-fw fa-lg fa-sign-out"></i>Desconectar</a></li>
                     </ul>
