--- a/src/Archmage/GameBundle/Resources/views/Home/patch.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/patch.html.twig
@@ -12,6 +12,18 @@
         </div>
         <div class="col-xs-12">
             <div class="panel panel-default">
+                <div class="panel-heading text-center">Versión 1.2b</div>
+                <div class="panel-body text-responsive">
+                    <ul class="fa-ul">
+                        <li><i class="fa-li fa fa-fw fa-lg fa-check-square"></i>Comienza la Temporada 3.</li>
+                        <li><i class="fa-li fa fa-fw fa-lg fa-check-square"></i></li>
+                    </ul>
+                </div>
+                <div class="panel-footer text-center">Beta cerrada</div>
+            </div>
+        </div>
+        <div class="col-xs-12">
+            <div class="panel panel-default">
                 <div class="panel-heading text-center">Versión 1.1b</div>
                 <div class="panel-body text-responsive">
                     <ul class="fa-ul">
