--- a/src/Archmage/GameBundle/Resources/views/Kingdom/summary.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/summary.html.twig
@@ -58,7 +58,7 @@
                     </div>
                 </div>
                 <div class="btn-group btn-group-justified" role="group" aria-label="...">
-                    <a href="{{ path('archmage_game_magic_charge') }}" class="btn btn-default"><i class="fa fa-fw fa-tint"></i><span class="hidden-xs">Cargar</span></a>
+                    <a href="{{ path('archmage_game_magic_meditate') }}" class="btn btn-default"><i class="fa fa-fw fa-tint"></i><span class="hidden-xs">Meditar</span></a>
                     <a href="{{ path('archmage_game_magic_conjure') }}" class="btn btn-default"><i class="fa fa-fw fa-magic"></i><span class="hidden-xs">Conjurar</span></a>
                     <a href="{{ path('archmage_game_magic_research') }}" class="btn btn-default"><i class="fa fa-fw fa-graduation-cap"></i><span class="hidden-xs">Investigar</span></a>
                 </div>
@@ -132,9 +132,9 @@
                     </div>
                 </div>
                 <div class="btn-group btn-group-justified" role="group" aria-label="...">
-                    <a href="{{ path('archmage_game_army_recruit') }}" class="btn btn-default"><i class="fa fa-fw fa-user-plus"></i><span class="hidden-xs">Reclutar</span></a>
-                    <a href="{{ path('archmage_game_army_disband') }}" class="btn btn-default"><i class="fa fa-fw fa-user-times"></i><span class="hidden-xs">Desbandar</span></a>
                     <a href="{{ path('archmage_game_army_attack') }}" class="btn btn-default"><i class="fa fa-fw fa-flag"></i><span class="hidden-xs">Atacar</span></a>
+                    <a href="{{ path('archmage_game_army_disband') }}" class="btn btn-default"><i class="fa fa-fw fa-user-times"></i><span class="hidden-xs">Desbandar</span></a>
+                    <a href="{{ path('archmage_game_army_quest') }}" class="btn btn-default"><i class="fa fa-fw fa-tree"></i><span class="hidden-xs">Aventura</span></a>
                 </div>
             </div>
         </div>
