--- a/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
@@ -100,7 +100,7 @@
                 </div>
             </div>
             <div class="panel panel-default">
-                <div class="panel-heading text-center"><i class="fa fa-fw fa-hourglass-half"></i>Multicuentas</div>
+                <div class="panel-heading text-center"><i class="fa fa-fw fa-group"></i>Multicuentas</div>
                 <div class="panel-body text-responsive text-only">
                     <p>El uso de varias cuentas por la misma persona otorga una tremenda ventaja y va en contra de las normas del juego. Los infractores serán perseguidos, baneados a perpetuidad y sodomizados con un paraguas.</p>
                 </div>
@@ -141,7 +141,7 @@
         <div class="col-xs-12">
             <div class="page-header text-center">
                 <a name="edificios"></a>
-                <h1><i class="fa fa-fw fa-info-circle"></i>Edificios</h1>
+                <h1><i class="fa fa-fw fa-info-circle"></i>Edificios ({{ buildings|length|nf }})</h1>
             </div>
         </div>
         {% for building in buildings %}
@@ -186,7 +186,7 @@
         <div class="col-xs-12">
             <div class="page-header text-center">
                 <a name="unidades"></a>
-                <h1><i class="fa fa-fw fa-info-circle"></i>Unidades</h1>
+                <h1><i class="fa fa-fw fa-info-circle"></i>Unidades ({{ units|length|nf }})</h1>
             </div>
         </div>
         {% for unit in units %}
@@ -226,7 +226,7 @@
         <div class="col-xs-12">
             <div class="page-header text-center">
                 <a name="heroes"></a>
-                <h1><i class="fa fa-fw fa-info-circle"></i>Héroes</h1>
+                <h1><i class="fa fa-fw fa-info-circle"></i>Héroes ({{ heroes|length|nf }})</h1>
             </div>
         </div>
         {% for hero in heroes %}
@@ -259,7 +259,7 @@
         <div class="col-xs-12">
             <div class="page-header text-center">
                 <a name="hechizos"></a>
-                <h1><i class="fa fa-fw fa-info-circle"></i>Hechizos</h1>
+                <h1><i class="fa fa-fw fa-info-circle"></i>Hechizos ({{ spells|length|nf }})</h1>
             </div>
         </div>
         {% for spell in spells %}
@@ -300,7 +300,7 @@
         <div class="col-xs-12">
             <div class="page-header text-center">
                 <a name="artefactos"></a>
-                <h1><i class="fa fa-fw fa-info-circle"></i>Artefactos</h1>
+                <h1><i class="fa fa-fw fa-info-circle"></i>Artefactos ({{ artifacts|length|nf }})</h1>
             </div>
         </div>
         {% for artifact in artifacts %}
