Nuevo estilo css para artefactos legendarios. Nuevas imagenes de anillos legendarios. Mejorada ayuda. Revertidos cambios de ataque a la version de la season 1. Ahora los artefactos legendarios son raros pero pueden salir en la subasta y en el mundo. Nueva entidad Recipe para la alquimia.

--- a/src/Archmage/GameBundle/Resources/public/css/style.css
+++ b/src/Archmage/GameBundle/Resources/public/css/style.css
@@ -261,6 +261,9 @@ body {
 .panel-default > .panel-footer {
     background-color: #3E444C;
 }
+.panel-legendary > .panel-heading, .panel-legendary > .panel-footer, .label-legendary {
+    background-color: #cc7c26;
+}
 /* DATATABLES */
 div.dataTables_paginate, div.dataTables_filter {
     text-align: center !important;
