--- a/src/Archmage/GameBundle/Resources/views/Kingdom/auction.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/auction.html.twig
@@ -175,7 +175,7 @@
         </div>
             {% elseif auction.item is not null %}
         <div class="col-xs-12 col-md-6">
-            <div class="panel panel-{{ auction.item.artifact.faction.class }}">
+            <div class="panel panel-{{ auction.item.artifact.class }}">
                 <div class="panel-heading text-center"><i class="fa fa-fw fa-diamond"></i><a href="{{ path('archmage_game_home_help') }}#{{ auction.item.artifact.name|slug }}" class="link">{{ auction.item.artifact.name }}</a> <span data-toggle="tooltip" data-placement="top" title="Cantidad de Artefactos">[{{ auction.item.quantity|nf }}]</span></div>
                 <div class="panel-body text-responsive">
                     <div class="row">
