--- a/src/Archmage/GameBundle/Resources/views/Kingdom/summary.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/summary.html.twig
@@ -51,9 +51,7 @@
                             {# row #}
                             <div class="col-xs-12"><i class="fa fa-fw fa-tint"></i>{{ player.manaresourceperturn|nf }}-{{ player.manamaintenanceperturn|nf }} = <span class="label label-{% if player.manaresourceperturn - player.manamaintenanceperturn >= 0 %}success{% else %}danger{% endif %}">{{ (player.manaresourceperturn -  player.manamaintenanceperturn)|nf }}</span> <span class="label label-extra">Maná/Turno</span></div>
                             {# row #}
-                            <div class="col-xs-12"><i class="fa fa-fw fa-magic"></i><span class="label label-extra">Nivel de Magia</span> {{ player.magic|nf }}</div>
-                            {# row #}
-                            <div class="col-xs-12"><i class="fa fa-fw fa-diamond"></i><span class="label label-extra"><a href="{{ path('archmage_game_magic_artifact') }}" class="link">Artefactos</a></span> {{ player.artifacts|nf }}</div>
+                            <div class="col-xs-12"><i class="fa fa-fw fa-user-plus"></i>{{ player.summonBonus|nf }}% <span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Aumenta la cantidad de tropas invocadas mediante hechizos">Bonus de Invocación</span></div>
                         </div>
                     </div>
                 </div>
@@ -246,18 +244,37 @@
                                 <td class="text-left"><i class="fa fa-fw fa-home"></i><span class="label label-extra"><a href="{{ path('archmage_game_home_help') }}#{{ construction.building.name|slug }}" class="link">{{ construction.building.name }}</a></span></td>
                                 <td class="text-right">{{ construction.quantity|nf }}</td>
                                 <td class="text-right">{{ (construction.quantity * construction.building.power)|nf }}</td>
-                                <td class="text-right">0</td>
+                                <td class="text-right"></td>
                                 <td class="text-right">{{ (construction.quantity * construction.building.goldResource)|nf }}</td>
                                 <td class="text-right">{{ (construction.quantity * construction.building.peopleResource)|nf }}</td>
                                 <td class="text-right">{{ (construction.quantity * construction.building.manaResource)|nf }}</td>
-                                <td class="text-right">-0</td>
+                                <td class="text-right"></td>
                                 <td class="text-right">-{{ (construction.quantity * construction.building.goldMaintenance)|nf }}</td>
                                 <td class="text-right">-{{ (construction.quantity * construction.building.peopleMaintenance)|nf }}</td>
                                 <td class="text-right">-{{ (construction.quantity * construction.building.manaMaintenance)|nf }}</td>
-                                <td class="text-right">0</td>
+                                <td class="text-right"></td>
                                 <td class="text-right">{{ (construction.quantity * construction.building.goldResource - construction.quantity * construction.building.goldMaintenance)|nf }}</td>
                                 <td class="text-right">{{ (construction.quantity * construction.building.peopleResource - construction.quantity * construction.building.peopleMaintenance)|nf }}</td>
                                 <td class="text-right">{{ (construction.quantity * construction.building.manaResource - construction.quantity * construction.building.manaMaintenance)|nf }}</td>
+                            </tr>
+                            {% endfor %}
+                            {% for item in player.items if item.artifact.legendary %}
+                            <tr>
+                                <td class="text-left"><i class="fa fa-fw fa-diamond"></i><span class="label label-extra"><a href="{{ path('archmage_game_home_help') }}#{{ item.artifact.name|slug }}" class="link">{{ item.artifact.name }}</a></span></td>
+                                <td class="text-right">{{ item.quantity|nf }}</td>
+                                <td class="text-right">0</td>
+                                <td class="text-right"></td>
+                                <td class="text-right">{{ item.artifact.skill.goldBonus }}%</td>
+                                <td class="text-right">{{ item.artifact.skill.peopleBonus }}%</td>
+                                <td class="text-right">{{ item.artifact.skill.manaBonus }}%</td>
+                                <td class="text-right"></td>
+                                <td class="text-right"></td>
+                                <td class="text-right"></td>
+                                <td class="text-right"></td>
+                                <td class="text-right"></td>
+                                <td class="text-right">{{ item.artifact.skill.goldBonus }}%</td>
+                                <td class="text-right">{{ item.artifact.skill.peopleBonus }}%</td>
+                                <td class="text-right">{{ item.artifact.skill.manaBonus }}%</td>
                             </tr>
                             {% endfor %}
                             {% for troop in player.troops %}
@@ -265,15 +282,15 @@
                                 <td class="text-left"><i class="fa fa-fw fa-group"></i><span class="label label-{{ troop.unit.faction.class }}"><a href="{{ path('archmage_game_home_help') }}#{{ troop.unit.name|slug }}" class="link">{{ troop.unit.name }}</a></span></td>
                                 <td class="text-right">{{ troop.quantity|nf }}</td>
                                 <td class="text-right">{{ (troop.quantity * troop.unit.power)|nf }}</td>
-                                <td class="text-right">0</td>
-                                <td class="text-right">0</td>
-                                <td class="text-right">0</td>
-                                <td class="text-right">0</td>
-                                <td class="text-right">-0</td>
+                                <td class="text-right"></td>
+                                <td class="text-right"></td>
+                                <td class="text-right"></td>
+                                <td class="text-right"></td>
+                                <td class="text-right"></td>
                                 <td class="text-right">-{{ (troop.quantity * troop.unit.goldMaintenance)|nf }}</td>
                                 <td class="text-right">-{{ (troop.quantity * troop.unit.peopleMaintenance)|nf }}</td>
                                 <td class="text-right">-{{ (troop.quantity * troop.unit.manaMaintenance)|nf }}</td>
-                                <td class="text-right">0</td>
+                                <td class="text-right"></td>
                                 <td class="text-right">-{{ (troop.quantity * troop.unit.goldMaintenance)|nf }}</td>
                                 <td class="text-right">-{{ (troop.quantity * troop.unit.peopleMaintenance)|nf }}</td>
                                 <td class="text-right">-{{ (troop.quantity * troop.unit.manaMaintenance)|nf }}</td>
@@ -284,15 +301,15 @@
                                 <td class="text-left"><i class="fa fa-fw fa-user"></i><span class="label label-{{ contract.hero.faction.class }}"><a href="{{ path('archmage_game_home_help') }}#{{ contract.hero.name|slug }}" class="link">{{ contract.hero.name }}</a></span></td>
                                 <td class="text-right">{{ contract.level|nf }}</td>
                                 <td class="text-right">{{ (contract.level * contract.hero.power)|nf }}</td>
-                                <td class="text-right">0</td>
-                                <td class="text-right">{% if contract.hero.skill.goldBonus > 0 %}{{ (contract.level * contract.hero.skill.goldBonus)|nf }}{% else %}0{% endif %}%</td>
-                                <td class="text-right">{% if contract.hero.skill.peopleBonus > 0 %}{{ (contract.level * contract.hero.skill.peopleBonus)|nf }}{% else %}0{% endif %}%</td>
-                                <td class="text-right">{% if contract.hero.skill.manaBonus > 0 %}{{ (contract.level * contract.hero.skill.manaBonus)|nf }}{% else %}0{% endif %}%</td>
-                                <td class="text-right">-0</td>
+                                <td class="text-right"></td>
+                                <td class="text-right">{% if contract.hero.skill.goldBonus > 0 %}{{ (contract.level * contract.hero.skill.goldBonus)|nf }}%{% endif %}</td>
+                                <td class="text-right">{% if contract.hero.skill.peopleBonus > 0 %}{{ (contract.level * contract.hero.skill.peopleBonus)|nf }}%{% endif %}</td>
+                                <td class="text-right">{% if contract.hero.skill.manaBonus > 0 %}{{ (contract.level * contract.hero.skill.manaBonus)|nf }}%{% endif %}</td>
+                                <td class="text-right"></td>
                                 <td class="text-right">-{{ (contract.level * contract.hero.goldMaintenance)|nf }}</td>
                                 <td class="text-right">-{{ (contract.level * contract.hero.peopleMaintenance)|nf }}</td>
                                 <td class="text-right">-{{ (contract.level * contract.hero.manaMaintenance)|nf }}</td>
-                                <td class="text-right">0</td>
+                                <td class="text-right"></td>
                                 <td class="text-right">-{{ (contract.level * contract.hero.goldMaintenance)|nf }}</td>
                                 <td class="text-right">-{{ (contract.level * contract.hero.peopleMaintenance)|nf }}</td>
                                 <td class="text-right">-{{ (contract.level * contract.hero.manaMaintenance)|nf }}</td>
@@ -302,16 +319,16 @@
                             <tr>
                                 <td class="text-left"><i class="fa fa-fw fa-link"></i><span class="label label-{{ enchantment.spell.faction.class }}"><a href="{{ path('archmage_game_home_help') }}#{{ enchantment.spell.name|slug }}" class="link">{{ enchantment.spell.name }}</a></span> a <span class="label label-{{ enchantment.victim.faction.class }}"><a href="{{ path('archmage_game_account_profile', {'id': enchantment.victim.id}) }}" class="link">{{ enchantment.victim.nick }}</a></span></td>
                                 <td class="text-right">{{ player.magic|nf }}</td>
-                                <td class="text-right">0</td>
-                                <td class="text-right">0</td>
-                                <td class="text-right">0%</td>
-                                <td class="text-right">0%</td>
-                                <td class="text-right">0%</td>
-                                <td class="text-right">-0</td>
+                                <td class="text-right"></td>
+                                <td class="text-right"></td>
+                                <td class="text-right"></td>
+                                <td class="text-right"></td>
+                                <td class="text-right"></td>
+                                <td class="text-right"></td>
                                 <td class="text-right">-{{ (enchantment.spell.goldMaintenance * enchantment.owner.magic)|nf }}</td>
                                 <td class="text-right">-{{ (enchantment.spell.peopleMaintenance * enchantment.owner.magic)|nf }}</td>
                                 <td class="text-right">-{{ (enchantment.spell.manaMaintenance * enchantment.owner.magic)|nf }}</td>
-                                <td class="text-right">0</td>
+                                <td class="text-right"></td>
                                 <td class="text-right">-{{ (enchantment.spell.goldMaintenance * enchantment.owner.magic)|nf }}</td>
                                 <td class="text-right">-{{ (enchantment.spell.peopleMaintenance * enchantment.owner.magic)|nf }}</td>
                                 <td class="text-right">-{{ (enchantment.spell.manaMaintenance * enchantment.owner.magic)|nf }}</td>
@@ -321,7 +338,7 @@
                             <tr>
                                 <td class="text-left"><i class="fa fa-fw fa-link"></i><span class="label label-{{ enchantment.spell.faction.class }}"><a href="{{ path('archmage_game_home_help') }}#{{ enchantment.spell.name|slug }}" class="link">{{ enchantment.spell.name }}</a></span> de <span class="label label-{{ enchantment.owner.faction.class }}"><a href="{{ path('archmage_game_account_profile', {'id': enchantment.owner.id}) }}" class="link">{{ enchantment.owner.nick }}</a></span></td>
                                 <td class="text-right">{{ enchantment.owner.magic|nf }}</td>
-                                <td class="text-right">0</td>
+                                <td class="text-right"></td>
                                 <td class="text-right">{% if enchantment.spell.skill.terrainBonus > 0 %}{{ enchantment.spell.skill.terrainBonus }}{% else %}0{% endif %}</td>
                                 <td class="text-right">{% if enchantment.spell.skill.goldBonus > 0 %}{{ enchantment.spell.skill.goldBonus * enchantment.owner.magic }}{% else %}0{% endif %}%</td>
                                 <td class="text-right">{% if enchantment.spell.skill.peopleBonus > 0 %}{{ enchantment.spell.skill.peopleBonus * enchantment.owner.magic }}{% else %}0{% endif %}%</td>
