--- a/src/Archmage/GameBundle/Resources/views/Home/patch.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/patch.html.twig
@@ -16,7 +16,17 @@
                 <div class="panel-body text-responsive">
                     <ul class="fa-ul">
                         <li><i class="fa-li fa fa-fw fa-lg fa-check-square"></i>Comienza la Temporada 3.</li>
-                        <li><i class="fa-li fa fa-fw fa-lg fa-check-square"></i></li>
+                        <li><i class="fa-li fa fa-fw fa-lg fa-check-square"></i>Ahora los Artefactos, Hechizos y Unidades tienen niveles de rareza: normal, raro y muy raro. Estos niveles afectan a la frecuencia de apararición en el juego de cualquiera de las maneras habituales. Los porcentajes permanecerán en secreto.</li>
+                        <li><i class="fa-li fa fa-fw fa-lg fa-check-square"></i>Se han eliminado los Hechizos <span class="label label-info">Lentitud</span>, <span class="label label-danger">Quemar Alas</span>, <span class="label label-warning">Miedo</span>, <span class="label label-success">Prisa</span> y <span class="label label-primary">Volar</span>.</li>
+                        <li><i class="fa-li fa fa-fw fa-lg fa-check-square"></i>El combate ha vuelto a su versión original. Ahora la velocidad vuelve a ser un factor importante, y las unidades más rapidas dañarán primero a las más lentas.</li>
+                        <li><i class="fa-li fa fa-fw fa-lg fa-check-square"></i>Se han añadido los Hechizos <span class="label label-info">Hechizo</span>, <span class="label label-danger">Hechizo</span>, <span class="label label-warning">Hechizo</span>, <span class="label label-success">Hechizo</span> y <span class="label label-primary">Hechizo</span>.</li>
+                        <li><i class="fa-li fa fa-fw fa-lg fa-check-square"></i>Se han eliminado los Artefactos <span class="label label-extra">Botas de Velocidad</span> y <span class="label label-extra">Elixir de Amor</span>.</li>
+                        <li><i class="fa-li fa fa-fw fa-lg fa-check-square"></i>Se han añadido los Artefactos <span class="label label-extra">Poción de Fuerza</span>, <span class="label label-extra">Poción de Vitalidad</span>, <span class="label label-extra">Poción de Pureza</span>, <span class="label label-extra">Poción de Amor</span>, <span class="label label-extra">Poción de Agilidad</span> y <span class="label label-extra">Muñeca Voodoo</span>.</li>
+                        <li><i class="fa-li fa fa-fw fa-lg fa-check-square"></i>Se han reducido los bonus de los Artefactos <span class="label label-extra">Tela de Araña</span> y <span class="label label-extra">Poción de Agilidad</span> a -1 y +1, respectivamente.</li>
+                        <li><i class="fa-li fa fa-fw fa-lg fa-check-square"></i>Se han añadido los Artefactos Legendarios <span class="label label-legendary">Anillo Avaricioso</span>, <span class="label label-legendary">Anillo Poderoso</span>, <span class="label label-legendary">Anillo Duro</span>, <span class="label label-legendary">Anillo Encantador</span> y <span class="label label-legendary">Anillo Invocador</span>.</li>
+                        <li><i class="fa-li fa fa-fw fa-lg fa-check-square"></i>Se ha añadido el sistema de Alquimia al juego. Un jugador puede usar <span class="label label-recipe">Recetas</span> para convertir unos Artefactos en otros. Pueden conseguirse en la Subasta, y son infinitas.</li>
+                        <li><i class="fa-li fa fa-fw fa-lg fa-check-square"></i>Se ha añadido el sistema de Aventuras al juego. Un jugador puede tratar de usar <span class="label label-map">Mapas</span> para derrotar ejércitos que merodean por el Reino y obtener interesantes recompensas. Pueden conseguirse en la Subasta, y son de un sólo uso.</li>
+                        <li><i class="fa-li fa fa-fw fa-lg fa-check-square"></i>Se han ajustado muchos precios de salida de la subasta dependiendo de la rareza.</li>
                     </ul>
                 </div>
                 <div class="panel-footer text-center">Beta cerrada</div>
@@ -29,15 +39,15 @@
                     <ul class="fa-ul">
                         <li><i class="fa-li fa fa-fw fa-lg fa-check-square"></i>Comienza la Temporada 2.</li>
                         <li><i class="fa-li fa fa-fw fa-lg fa-check-square"></i>Se ha añadido un cap de poder superior del 80% para no atacar a magos mucho más fuertes, evitando el exploit de crearse una cuenta para atacar a un mago top y contraatacar para robar tierras a la nueva cuenta.</li>
-                        <li><i class="fa-li fa fa-fw fa-lg fa-check-square"></i>Se ha eliminado el artefacto "Reloj de Arena" del juego.</li>
-                        <li><i class="fa-li fa fa-fw fa-lg fa-check-square"></i>Se ha agregado el artefacto "Agua Bendita" al juego.</li>
-                        <li><i class="fa-li fa fa-fw fa-lg fa-check-square"></i>Se ha eliminado la reducción de recursos del "Apocalipsis", pero se ha incrementado su coste de mantenimiento y su coste de Maná al conjurarlo.</li>
+                        <li><i class="fa-li fa fa-fw fa-lg fa-check-square"></i>Se ha eliminado el Artefacto <span class="label label-extra">Reloj de Arena</span>.</li>
+                        <li><i class="fa-li fa fa-fw fa-lg fa-check-square"></i>Se ha agregado el Artefacto <span class="label label-extra">Agua Bendita</span>.</li>
+                        <li><i class="fa-li fa fa-fw fa-lg fa-check-square"></i>Se ha eliminado la reducción de recursos del Hechizo <span class="label label-extra">Apocalipsis</span>, pero se ha incrementado su coste de mantenimiento y su coste de Maná al conjurarlo.</li>
                         <li><i class="fa-li fa fa-fw fa-lg fa-check-square"></i>Se ha aumentado el número de turnos necesarios para ganar con "Apocalipsis" de 600 a 900.</li>
-                        <li><i class="fa-li fa fa-fw fa-lg fa-check-square"></i>Se han ajustado valores de % bonus de muchos héroes, hechizos y encantamientos.</li>
+                        <li><i class="fa-li fa fa-fw fa-lg fa-check-square"></i>Se han ajustado valores de % bonus de muchos Héroes, Hechizos y Encantamientos.</li>
                         <li><i class="fa-li fa fa-fw fa-lg fa-check-square"></i>Se ha modificado el sistema de combate. Ahora la superioridad en velocidad otorga un bonus de ataque del 5% por punto, en lugar de atacar primero, por lo que no es tan obligatoria como en versiones anteriores.</li>
                         <li><i class="fa-li fa fa-fw fa-lg fa-check-square"></i>Se ha cambiado el sistema de subasta de puja en el úñtimo segundo a puja máxima con sobrepuja automática tipo eBay.</li>
-                        <li><i class="fa-li fa fa-fw fa-lg fa-check-square"></i>Se han eliminado los hechizos de nivel 5 de la subasta.</li>
-                        <li><i class="fa-li fa fa-fw fa-lg fa-check-square"></i>Se ha duplicado el bonus de defensa de las Fortalezas y Barreras.</li>
+                        <li><i class="fa-li fa fa-fw fa-lg fa-check-square"></i>Se han eliminado los Hechizos de nivel 5 de la subasta.</li>
+                        <li><i class="fa-li fa fa-fw fa-lg fa-check-square"></i>Se ha duplicado el bonus de defensa de las <span class="label label-extra">Fortalezas</span> y <span class="label label-extra">Barreras</span>.</li>
                     </ul>
                 </div>
                 <div class="panel-footer text-center">Beta cerrada</div>
