--- a/src/Archmage/GameBundle/Resources/views/Account/legend.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Account/legend.html.twig
@@ -7,7 +7,7 @@
     <div class="row">
         <div class="col-xs-12">
             <div class="page-header text-center">
-                <h1><i class="fa fa-fw fa-moon-o"></i>Leyendas</h1>
+                <h1><i class="fa fa-fw fa-star"></i>Leyendas</h1>
             </div>
             <table id="datatable" class="table table-striped table-bordered table-condensed text-responsive" cellspacing="0" width="100%">
                 <thead>
