--- a/src/Archmage/GameBundle/Resources/views/Army/quest.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Army/quest.html.twig
@@ -7,28 +7,68 @@
     <div class="row">
         <div class="col-xs-12">
             <div class="page-header text-center">
-                <h1><i class="fa fa-fw fa-tree"></i>Aventura</h1>
+                <h1><i class="fa fa-fw fa-map"></i>Aventura</h1>
                 {% include "ArchmageGameBundle::resources.html.twig" with {'player': player} %}
             </div>
         </div>
         <div class="col-xs-12 col-md-6 col-md-offset-3">
             <div class="panel panel-default">
-                <div class="panel-heading text-center">Misiones</div>
+                <div class="panel-heading text-center">Mapas</div>
                 <div class="panel-body text-responsive">
                     <div class="row">
                         <div class="col-xs-4">
-                            <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/army.jpg') }}">
+                            <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/quest.jpg') }}">
                         </div>
                         <div class="col-xs-8 text-padded">
-                            <div class="col-xs-12">Aquí puedes gastar 10 <span class="label label-extra">Turnos</span>.</div>
+                            <div class="col-xs-12">Aquí puedes gastar 10 <span class="label label-extra">Turnos</span> y aceptar un contrato para mandar a tus tropas a una misión en busca de fortuna y gloria. En algunos incluso existe la probabilidad de encontrar un <span class="label label-legendary">Artefacto</span> legendario.</div>
                         </div>
                     </div>
                 </div>
                 <div class="panel-footer text-center">
-                    <a class="btn btn-default" href="{{ path( 'archmage_game_army_disband' ) }}"><i class="fa fa-fw fa-user-times"></i>Desbandar</a>
+                    <a class="btn btn-default" href="{{ path( 'archmage_game_kingdom_auction' ) }}"><i class="fa fa-fw fa-legal"></i>Subasta</a>
                 </div>
             </div>
         </div>
+        {% for map in player.maps %}
+        <div class="col-xs-12 col-md-6">
+            <div class="panel panel-map">
+                <div class="panel-heading text-center"><i class="fa fa-fw fa-map"></i><a href="{{ path('archmage_game_home_help') }}#maps" class="link">Mapa del Tesoro</a></div>
+                <div class="panel-body text-responsive">
+                    <div class="row">
+                        <div class="col-xs-4">
+                            <img class="custom-thumbnail-left" src="{{ asset( 'bundles/archmagegame/images/kingdom/quest.jpg' ) }}" />
+                        </div>
+                        <div class="col-xs-8 text-padded">
+                            {% for troop in map.troops %}
+                                {# row #}
+                                <div class="col-xs-12"><i class="fa fa-fw fa-users"></i><span class="label label-{{ troop.unit.faction.class }}"><a href="{{ path('archmage_game_home_help') }}#{{ troop.unit.name|slug }}" class="link">{{ troop.unit.name }}</a></span> {{ troop.quantity|nf }}</div>
+                            {% endfor %}
+                            <div class="col-xs-12"><i class="fa fa-fw fa-diamond"></i><span class="label label-{{ map.artifact.class }}"><a href="{{ path('archmage_game_home_help') }}#{{ map.artifact.name|slug }}" class="link">{{ map.artifact.name }}</a></span></div>
+                            <div class="col-xs-12"><i class="fa fa-fw fa-money"></i>{{ map.gold|nf }}</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="panel-footer text-center">
+                    <form id="map{{ map.id }}" name="map{{ map.id }}" class="form-inline" data-toggle="validator" action="{{ path('archmage_game_army_quest') }}" method="post" role="form">
+                        <div class="form-group">
+                            <div class="input-group">
+                                <div class="btn-group" role="group" aria-label="...">
+                                    <button type="submit" id="activate" name="action" value="activate" class="btn btn-default"><i class="fa fa-fw fa-flag"></i>Aceptar</button>
+                                </div>
+                                <input type="hidden" id="map" name="map" value="{{ map.id }}" required />
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+        {% else %}
+        <div class="container">
+            <div class="col-xs-12 alert alert-danger text-responsive text-center" role="alert">
+                <i class="fa fa-fw fa-exclamation-triangle"></i>Actualmente no tienes Mapas en tu poder. Tal vez deberías comprar alguno en la <i class="fa fa-fw fa-legal"></i><a href="{{ path('archmage_game_kingdom_auction') }}">Subasta</a>.
+            </div>
+        </div>
+        {% endfor %}
     </div>
 </div>
 {% endblock %}
