--- a/src/Archmage/GameBundle/Resources/views/Kingdom/summary.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/summary.html.twig
@@ -39,7 +39,7 @@
         </div>
         <div class="col-xs-12 col-md-6">
             <div class="panel panel-default">
-                <div class="panel-heading text-center"><i class="fa fa-fw fa-flask"></i>Magia</div>
+                <div class="panel-heading text-center"><i class="fa fa-fw fa-magic"></i>Magia</div>
                 <div class="panel-body text-responsive">
                     <div class="row">
                         <div class="col-xs-4">
@@ -52,6 +52,8 @@
                             <div class="col-xs-12"><i class="fa fa-fw fa-tint"></i>{{ player.manaresourceperturn|nf }}-{{ player.manamaintenanceperturn|nf }} = <span class="label label-{% if player.manaresourceperturn - player.manamaintenanceperturn >= 0 %}success{% else %}danger{% endif %}">{{ (player.manaresourceperturn -  player.manamaintenanceperturn)|nf }}</span> <span class="label label-extra">Maná/Turno</span></div>
                             {# row #}
                             <div class="col-xs-12"><i class="fa fa-fw fa-user-plus"></i>{{ player.summonBonus|nf }}% <span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Aumenta la cantidad de tropas invocadas mediante hechizos">Bonus de Invocación</span></div>
+                            {# row #}
+                            <div class="col-xs-12"><i class="fa fa-fw fa-flask"></i>{{ player.recipes|length|nf }} <span class="label label-extra">Recetas</span></div>
                         </div>
                     </div>
                 </div>
@@ -59,6 +61,7 @@
                     <a href="{{ path('archmage_game_magic_meditate') }}" class="btn btn-default"><i class="fa fa-fw fa-tint"></i><span class="hidden-xs">Meditar</span></a>
                     <a href="{{ path('archmage_game_magic_conjure') }}" class="btn btn-default"><i class="fa fa-fw fa-magic"></i><span class="hidden-xs">Conjurar</span></a>
                     <a href="{{ path('archmage_game_magic_research') }}" class="btn btn-default"><i class="fa fa-fw fa-graduation-cap"></i><span class="hidden-xs">Investigar</span></a>
+                    <a href="{{ path('archmage_game_magic_alchemy') }}" class="btn btn-default"><i class="fa fa-fw fa-flask"></i><span class="hidden-xs">Alquimia</span></a>
                 </div>
             </div>
         </div>
@@ -120,19 +123,20 @@
                         </div>
                         <div class="col-xs-8 text-padded">
                             {% for troop in player.troops %}
-                                {# row #}
-                                <div class="col-xs-12"><i class="fa fa-fw fa-users"></i><span class="label label-{{ troop.unit.faction.class }}"><a href="{{ path('archmage_game_home_help') }}#{{ troop.unit.name|slug }}" class="link">{{ troop.unit.name }}</a></span> {{ troop.quantity|nf }}</div>
+                            {# row #}
+                            <div class="col-xs-12"><i class="fa fa-fw fa-users"></i><span class="label label-{{ troop.unit.faction.class }}"><a href="{{ path('archmage_game_home_help') }}#{{ troop.unit.name|slug }}" class="link">{{ troop.unit.name }}</a></span> {{ troop.quantity|nf }}</div>
                             {% else %}
-                                {# row #}
-                                <div class="col-xs-12">Ninguna tropa en tu ejército</div>
+                            {# row #}
+                            <div class="col-xs-12">Ninguna tropa en tu ejército</div>
                             {% endfor %}
+                            <div class="col-xs-12"><i class="fa fa-fw fa-map"></i>{{ player.maps|length|nf }} <span class="label label-extra">Mapas</span></div>
                         </div>
                     </div>
                 </div>
                 <div class="btn-group btn-group-justified" role="group" aria-label="...">
-                    <a href="{{ path('archmage_game_army_attack') }}" class="btn btn-default"><i class="fa fa-fw fa-flag"></i><span class="hidden-xs">Atacar</span></a>
+                    <a href="{{ path('archmage_game_army_attack') }}" class="btn btn-default"><i class="fa fa-fw fa-crosshairs"></i><span class="hidden-xs">Atacar</span></a>
                     <a href="{{ path('archmage_game_army_disband') }}" class="btn btn-default"><i class="fa fa-fw fa-user-times"></i><span class="hidden-xs">Desbandar</span></a>
-                    <a href="{{ path('archmage_game_army_quest') }}" class="btn btn-default"><i class="fa fa-fw fa-tree"></i><span class="hidden-xs">Aventura</span></a>
+                    <a href="{{ path('archmage_game_army_quest') }}" class="btn btn-default"><i class="fa fa-fw fa-map"></i><span class="hidden-xs">Aventura</span></a>
                 </div>
             </div>
         </div>
@@ -258,6 +262,25 @@
                                 <td class="text-right">{{ (construction.quantity * construction.building.manaResource - construction.quantity * construction.building.manaMaintenance)|nf }}</td>
                             </tr>
                             {% endfor %}
+                            {% for contract in player.contracts %}
+                                <tr>
+                                    <td class="text-left"><i class="fa fa-fw fa-user"></i><span class="label label-{{ contract.hero.faction.class }}"><a href="{{ path('archmage_game_home_help') }}#{{ contract.hero.name|slug }}" class="link">{{ contract.hero.name }}</a></span></td>
+                                    <td class="text-right">{{ contract.level|nf }}</td>
+                                    <td class="text-right">{{ (contract.level * contract.hero.power)|nf }}</td>
+                                    <td class="text-right"></td>
+                                    <td class="text-right">{% if contract.hero.skill.goldBonus > 0 %}{{ (contract.level * contract.hero.skill.goldBonus)|nf }}%{% endif %}</td>
+                                    <td class="text-right">{% if contract.hero.skill.peopleBonus > 0 %}{{ (contract.level * contract.hero.skill.peopleBonus)|nf }}%{% endif %}</td>
+                                    <td class="text-right">{% if contract.hero.skill.manaBonus > 0 %}{{ (contract.level * contract.hero.skill.manaBonus)|nf }}%{% endif %}</td>
+                                    <td class="text-right"></td>
+                                    <td class="text-right">-{{ (contract.level * contract.hero.goldMaintenance)|nf }}</td>
+                                    <td class="text-right">-{{ (contract.level * contract.hero.peopleMaintenance)|nf }}</td>
+                                    <td class="text-right">-{{ (contract.level * contract.hero.manaMaintenance)|nf }}</td>
+                                    <td class="text-right"></td>
+                                    <td class="text-right">-{{ (contract.level * contract.hero.goldMaintenance)|nf }}</td>
+                                    <td class="text-right">-{{ (contract.level * contract.hero.peopleMaintenance)|nf }}</td>
+                                    <td class="text-right">-{{ (contract.level * contract.hero.manaMaintenance)|nf }}</td>
+                                </tr>
+                            {% endfor %}
                             {% for item in player.items if item.artifact.legendary %}
                             <tr>
                                 <td class="text-left"><i class="fa fa-fw fa-diamond"></i><span class="label label-extra"><a href="{{ path('archmage_game_home_help') }}#{{ item.artifact.name|slug }}" class="link">{{ item.artifact.name }}</a></span></td>
@@ -276,6 +299,25 @@
                                 <td class="text-right">{{ item.artifact.skill.peopleBonus }}%</td>
                                 <td class="text-right">{{ item.artifact.skill.manaBonus }}%</td>
                             </tr>
+                            {% endfor %}
+                            {% for enchantment in player.enchantmentsVictim %}
+                                <tr>
+                                    <td class="text-left"><i class="fa fa-fw fa-link"></i><span class="label label-{{ enchantment.spell.faction.class }}"><a href="{{ path('archmage_game_home_help') }}#{{ enchantment.spell.name|slug }}" class="link">{{ enchantment.spell.name }}</a></span> de <span class="label label-{{ enchantment.owner.faction.class }}"><a href="{{ path('archmage_game_account_profile', {'id': enchantment.owner.id}) }}" class="link">{{ enchantment.owner.nick }}</a></span></td>
+                                    <td class="text-right">{{ enchantment.owner.magic|nf }}</td>
+                                    <td class="text-right"></td>
+                                    <td class="text-right">{% if enchantment.spell.skill.terrainBonus > 0 %}{{ enchantment.spell.skill.terrainBonus }}{% else %}0{% endif %}</td>
+                                    <td class="text-right">{% if enchantment.spell.skill.goldBonus > 0 %}{{ enchantment.spell.skill.goldBonus * enchantment.owner.magic }}{% else %}0{% endif %}%</td>
+                                    <td class="text-right">{% if enchantment.spell.skill.peopleBonus > 0 %}{{ enchantment.spell.skill.peopleBonus * enchantment.owner.magic }}{% else %}0{% endif %}%</td>
+                                    <td class="text-right">{% if enchantment.spell.skill.manaBonus > 0 %}{{ enchantment.spell.skill.manaBonus * enchantment.owner.magic }}{% else %}0{% endif %}%</td>
+                                    <td class="text-right">{% if enchantment.spell.skill.terrainBonus < 0 %}{{ enchantment.spell.skill.terrainBonus * enchantment.owner.magic }}{% else %}-0{% endif %}</td>
+                                    <td class="text-right">{% if enchantment.spell.skill.goldBonus < 0 %}{{ enchantment.spell.skill.goldBonus * enchantment.owner.magic }}{% else %}-0{% endif %}%</td>
+                                    <td class="text-right">{% if enchantment.spell.skill.peopleBonus < 0 %}{{ enchantment.spell.skill.peopleBonus * enchantment.owner.magic }}{% else %}-0{% endif %}%</td>
+                                    <td class="text-right">{% if enchantment.spell.skill.manaBonus < 0 %}{{ enchantment.spell.skill.manaBonus * enchantment.owner.magic }}{% else %}-0{% endif %}%</td>
+                                    <td class="text-right">{% if enchantment.spell.skill.terrainBonus > 0 %}{{ enchantment.spell.skill.terrainBonus }}{% else %}{{ enchantment.spell.skill.terrainBonus * enchantment.owner.magic }}{% endif %}</td>
+                                    <td class="text-right">{{ enchantment.spell.skill.goldBonus * enchantment.owner.magic }}%</td>
+                                    <td class="text-right">{{ enchantment.spell.skill.peopleBonus * enchantment.owner.magic }}%</td>
+                                    <td class="text-right">{{ enchantment.spell.skill.manaBonus * enchantment.owner.magic }}%</td>
+                                </tr>
                             {% endfor %}
                             {% for troop in player.troops %}
                             <tr>
@@ -296,25 +338,6 @@
                                 <td class="text-right">-{{ (troop.quantity * troop.unit.manaMaintenance)|nf }}</td>
                             </tr>
                             {% endfor %}
-                            {% for contract in player.contracts %}
-                            <tr>
-                                <td class="text-left"><i class="fa fa-fw fa-user"></i><span class="label label-{{ contract.hero.faction.class }}"><a href="{{ path('archmage_game_home_help') }}#{{ contract.hero.name|slug }}" class="link">{{ contract.hero.name }}</a></span></td>
-                                <td class="text-right">{{ contract.level|nf }}</td>
-                                <td class="text-right">{{ (contract.level * contract.hero.power)|nf }}</td>
-                                <td class="text-right"></td>
-                                <td class="text-right">{% if contract.hero.skill.goldBonus > 0 %}{{ (contract.level * contract.hero.skill.goldBonus)|nf }}%{% endif %}</td>
-                                <td class="text-right">{% if contract.hero.skill.peopleBonus > 0 %}{{ (contract.level * contract.hero.skill.peopleBonus)|nf }}%{% endif %}</td>
-                                <td class="text-right">{% if contract.hero.skill.manaBonus > 0 %}{{ (contract.level * contract.hero.skill.manaBonus)|nf }}%{% endif %}</td>
-                                <td class="text-right"></td>
-                                <td class="text-right">-{{ (contract.level * contract.hero.goldMaintenance)|nf }}</td>
-                                <td class="text-right">-{{ (contract.level * contract.hero.peopleMaintenance)|nf }}</td>
-                                <td class="text-right">-{{ (contract.level * contract.hero.manaMaintenance)|nf }}</td>
-                                <td class="text-right"></td>
-                                <td class="text-right">-{{ (contract.level * contract.hero.goldMaintenance)|nf }}</td>
-                                <td class="text-right">-{{ (contract.level * contract.hero.peopleMaintenance)|nf }}</td>
-                                <td class="text-right">-{{ (contract.level * contract.hero.manaMaintenance)|nf }}</td>
-                            </tr>
-                            {% endfor %}
                             {% for enchantment in player.enchantmentsOwner %}
                             <tr>
                                 <td class="text-left"><i class="fa fa-fw fa-link"></i><span class="label label-{{ enchantment.spell.faction.class }}"><a href="{{ path('archmage_game_home_help') }}#{{ enchantment.spell.name|slug }}" class="link">{{ enchantment.spell.name }}</a></span> a <span class="label label-{{ enchantment.victim.faction.class }}"><a href="{{ path('archmage_game_account_profile', {'id': enchantment.victim.id}) }}" class="link">{{ enchantment.victim.nick }}</a></span></td>
@@ -332,25 +355,6 @@
                                 <td class="text-right">-{{ (enchantment.spell.goldMaintenance * enchantment.owner.magic)|nf }}</td>
                                 <td class="text-right">-{{ (enchantment.spell.peopleMaintenance * enchantment.owner.magic)|nf }}</td>
                                 <td class="text-right">-{{ (enchantment.spell.manaMaintenance * enchantment.owner.magic)|nf }}</td>
-                            </tr>
-                            {% endfor %}
-                            {% for enchantment in player.enchantmentsVictim %}
-                            <tr>
-                                <td class="text-left"><i class="fa fa-fw fa-link"></i><span class="label label-{{ enchantment.spell.faction.class }}"><a href="{{ path('archmage_game_home_help') }}#{{ enchantment.spell.name|slug }}" class="link">{{ enchantment.spell.name }}</a></span> de <span class="label label-{{ enchantment.owner.faction.class }}"><a href="{{ path('archmage_game_account_profile', {'id': enchantment.owner.id}) }}" class="link">{{ enchantment.owner.nick }}</a></span></td>
-                                <td class="text-right">{{ enchantment.owner.magic|nf }}</td>
-                                <td class="text-right"></td>
-                                <td class="text-right">{% if enchantment.spell.skill.terrainBonus > 0 %}{{ enchantment.spell.skill.terrainBonus }}{% else %}0{% endif %}</td>
-                                <td class="text-right">{% if enchantment.spell.skill.goldBonus > 0 %}{{ enchantment.spell.skill.goldBonus * enchantment.owner.magic }}{% else %}0{% endif %}%</td>
-                                <td class="text-right">{% if enchantment.spell.skill.peopleBonus > 0 %}{{ enchantment.spell.skill.peopleBonus * enchantment.owner.magic }}{% else %}0{% endif %}%</td>
-                                <td class="text-right">{% if enchantment.spell.skill.manaBonus > 0 %}{{ enchantment.spell.skill.manaBonus * enchantment.owner.magic }}{% else %}0{% endif %}%</td>
-                                <td class="text-right">{% if enchantment.spell.skill.terrainBonus < 0 %}{{ enchantment.spell.skill.terrainBonus * enchantment.owner.magic }}{% else %}-0{% endif %}</td>
-                                <td class="text-right">{% if enchantment.spell.skill.goldBonus < 0 %}{{ enchantment.spell.skill.goldBonus * enchantment.owner.magic }}{% else %}-0{% endif %}%</td>
-                                <td class="text-right">{% if enchantment.spell.skill.peopleBonus < 0 %}{{ enchantment.spell.skill.peopleBonus * enchantment.owner.magic }}{% else %}-0{% endif %}%</td>
-                                <td class="text-right">{% if enchantment.spell.skill.manaBonus < 0 %}{{ enchantment.spell.skill.manaBonus * enchantment.owner.magic }}{% else %}-0{% endif %}%</td>
-                                <td class="text-right">{% if enchantment.spell.skill.terrainBonus > 0 %}{{ enchantment.spell.skill.terrainBonus }}{% else %}{{ enchantment.spell.skill.terrainBonus * enchantment.owner.magic }}{% endif %}</td>
-                                <td class="text-right">{{ enchantment.spell.skill.goldBonus * enchantment.owner.magic }}%</td>
-                                <td class="text-right">{{ enchantment.spell.skill.peopleBonus * enchantment.owner.magic }}%</td>
-                                <td class="text-right">{{ enchantment.spell.skill.manaBonus * enchantment.owner.magic }}%</td>
                             </tr>
                             {% endfor %}
                         </tbody>
