--- a/src/Archmage/GameBundle/Resources/views/navbar.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/navbar.html.twig
@@ -28,21 +28,22 @@
                     </ul>
                 </li>
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-fw fa-lg fa-flask"></i>Magia<span class="fa fa-fw fa-lg fa-caret-down"></span></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-fw fa-lg fa-magic"></i>Magia<span class="fa fa-fw fa-lg fa-caret-down"></span></a>
                     <ul class="dropdown-menu" role="menu">
                         <li><a href="{{ path('archmage_game_magic_meditate') }}"><i class="fa fa-fw fa-lg fa-tint"></i>Meditar</a></li>
                         <li><a href="{{ path('archmage_game_magic_research') }}"><i class="fa fa-fw fa-lg fa-graduation-cap"></i>Investigar</a></li>
                         <li><a href="{{ path('archmage_game_magic_conjure') }}"><i class="fa fa-fw fa-lg fa-magic"></i>Conjurar</a></li>
                         <li><a href="{{ path('archmage_game_magic_dispell') }}"><i class="fa fa-fw fa-lg fa-chain-broken"></i>Desencantar</a></li>
                         <li><a href="{{ path('archmage_game_magic_artifact') }}"><i class="fa fa-fw fa-lg fa-joomla"></i>Artefactos</a></li>
+                        <li><a href="{{ path('archmage_game_magic_alchemy') }}"><i class="fa fa-fw fa-lg fa-flask"></i>Alquimia</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-fw fa-lg fa-flag-checkered"></i>Ejército<span class="fa fa-fw fa-lg fa-caret-down"></span></a>
                     <ul class="dropdown-menu" role="menu">
-                        <li><a href="{{ path('archmage_game_army_attack') }}"><i class="fa fa-fw fa-lg fa-flag"></i>Atacar</a></li>
+                        <li><a href="{{ path('archmage_game_army_attack') }}"><i class="fa fa-fw fa-lg fa-crosshairs"></i>Atacar</a></li>
                         <li><a href="{{ path('archmage_game_army_disband') }}"><i class="fa fa-fw fa-lg fa-user-times"></i>Desbandar</a></li>
-                        <li><a href="{{ path('archmage_game_army_quest') }}"><i class="fa fa-fw fa-lg fa-tree"></i>Aventura</a></li>
+                        <li><a href="{{ path('archmage_game_army_quest') }}"><i class="fa fa-fw fa-lg fa-map"></i>Aventura</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
@@ -51,7 +52,7 @@
                         <li><a href="{{ path('archmage_game_account_profile') }}"><i class="fa fa-fw fa-lg fa-trophy"></i>Perfil</a></li>
                         <li><a href="{{ path('archmage_game_account_ranking') }}"><i class="fa fa-fw fa-lg fa-line-chart"></i>Ranking</a></li>
                         <li><a href="{{ path('archmage_game_account_message') }}"><i class="fa fa-fw fa-lg fa-envelope"></i>Mensajes</a></li>
-                        <li><a href="{{ path('archmage_game_account_legend') }}"><i class="fa fa-fw fa-lg fa-moon-o"></i>Leyendas</a></li>
+                        <li><a href="{{ path('archmage_game_account_legend') }}"><i class="fa fa-fw fa-lg fa-star"></i>Leyendas</a></li>
                         <li class="divider"></li>
                         <li><a href="{{ path('archmage_game_home_patch') }}"><i class="fa fa-fw fa-lg fa-medkit"></i>Parches</a></li>
                         <li><a href="{{ path('archmage_game_home_help') }}"><i class="fa fa-fw fa-lg fa-book"></i>Ayuda</a></li>
